--- a/single-page.html
+++ b/single-page.html
@@ -104,19 +104,20 @@
                             
                             Curabitur id viverra mi. Aenean vulputate viverra elit. Cras tellus erat, rhoncus quis sagittis vel, convallis sit amet est. Maecenas finibus porttitor eros. Praesent vehicula rutrum neque. Donec at lobortis elit. Aliquam a malesuada turpis, id mattis ligula. Nunc molestie condimentum metus, nec cursus arcu sodales vitae. In blandit pretium nisi, nec semper dolor pharetra ac. Pellentesque a leo quis tellus porttitor volutpat.
                         </p>
-                        <div class="post-tags d-flex flex-nowrap align-items-center justify-content-start mb-2">
-                            <h3>#</h3>
-                            <ul class="list-group list-group-horizontal flex-wrap ms-2">
-                                <li class="list-group-item"><a href="#">ABCD</a></li>
-                                <li class="list-group-item"><a href="#">EFGH</a></li>
-                                <li class="list-group-item"><a href="#">ABCD</a></li>
-                                <li class="list-group-item"><a href="#">EFGH</a></li>
-                                <li class="list-group-item"><a href="#">ABCD</a></li>
-                                <li class="list-group-item"><a href="#">EFGH</a></li>
-                                <li class="list-group-item"><a href="#">ABCD</a></li>
-                                <li class="list-group-item"><a href="#">EFGH</a></li>
-                                <li class="list-group-item"><a href="#">ABCD</a></li>
-                                <li class="list-group-item"><a href="#">EFGH</a></li>
+                        <div class="post-tags mb-2">
+                            <ul class="list-group list-group-horizontal list-unstyled d-flex flex-wrap">
+                                <li class="ms-2 mb-2"><a href="#" class="btn btn-outline-secondary">#ABCD</a></li>
+                                <li class="ms-2 mb-2"><a href="#" class="btn btn-outline-secondary">#EFGH</a></li>
+                                <li class="ms-2 mb-2"><a href="#" class="btn btn-outline-secondary">#EFGH</a></li>
+                                <li class="ms-2 mb-2"><a href="#" class="btn btn-outline-secondary">#ABCD</a></li>
+                                <li class="ms-2 mb-2"><a href="#" class="btn btn-outline-secondary">#EFGH</a></li>
+                                <li class="ms-2 mb-2"><a href="#" class="btn btn-outline-secondary">#EFGH</a></li>
+                                <li class="ms-2 mb-2"><a href="#" class="btn btn-outline-secondary">#ABCD</a></li>
+                                <li class="ms-2 mb-2"><a href="#" class="btn btn-outline-secondary">#EFGH</a></li>
+                                <li class="ms-2 mb-2"><a href="#" class="btn btn-outline-secondary">#EFGH</a></li>
+                                <li class="ms-2 mb-2"><a href="#" class="btn btn-outline-secondary">#ABCD</a></li>
+                                <li class="ms-2 mb-2"><a href="#" class="btn btn-outline-secondary">#EFGH</a></li>
+                                <li class="ms-2 mb-2"><a href="#" class="btn btn-outline-secondary">#EFGH</a></li>
                             </ul>
                         </div>
                         <div class="social-share d-flex align-items-center justify-content-start">
@@ -397,7 +398,7 @@
                 <div class="copy-text col-md-8">
                     <p class="text-white">© Copyright,2023. All Rights Reserved. <a href="#" class="text-white">Ultra-Hyphen</a></p>
                 </div>
-                <div class="footer-social-link col-md-4 text-end">
+                <div class="footer-social-link col-md-4 d-flex justify-content-md-end">
                     <a href="#" class="ms-2 text-white"><i class="bi bi-facebook"></i></a>
                     <a href="#"class="ms-2 text-white"><i class="bi bi-twitter"></i></a>
                     <a href="#"class="ms-2 text-white"><i class="bi bi-instagram"></i></a>
