--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 <div class="copy-text col-md-8">
                     <p class="text-white">© Copyright,2023. All Rights Reserved. <a href="#" class="text-white">Ultra-Hyphen</a></p>
                 </div>
-                <div class="footer-social-link col-md-4 text-end">
+                <div class="footer-social-link col-md-4 d-flex justify-content-md-end">
                     <a href="#" class="ms-2 text-white"><i class="bi bi-facebook"></i></a>
                     <a href="#"class="ms-2 text-white"><i class="bi bi-twitter"></i></a>
                     <a href="#"class="ms-2 text-white"><i class="bi bi-instagram"></i></a>
