--- a/index.html
+++ b/index.html
@@ -370,14 +370,15 @@
     <footer id="footer" class="d-flex align-items-center mt-5 bg-dark">
         <div class="container-fluid">
             <div class="row pt-3">
-                <div class="copy-text col-md-8">
-                    <p class="text-white">© Copyright,2023. All Rights Reserved. <a href="#" class="text-white">Ultra-Hyphen</a></p>
-                </div>
-                <div class="footer-social-link col-md-4 d-flex justify-content-md-end">
+                <div class="footer-social-link col-md-12 d-flex justify-content-center">
                     <a href="#" class="ms-2 text-white"><i class="bi bi-facebook"></i></a>
                     <a href="#"class="ms-2 text-white"><i class="bi bi-twitter"></i></a>
                     <a href="#"class="ms-2 text-white"><i class="bi bi-instagram"></i></a>
                     <a href="#"class="ms-2 text-white"><i class="bi bi-youtube"></i></a>
+                </div>
+                <div class="copy-text col-md-12 text-center mt-2">
+                    <p class="text-white">© Copyright,2023. 
+                    </br>All Rights Reserved. <a href="#" class="text-white">Ultra-Hyphen</a></p>
                 </div>
             </div>
         </div>
